# fastauthd

./: .gitignore  README.md  fastauthd_systemd.c  fastauthd_systemd.h  meson.build
fastauthd/: fastauthd.c  fastauthd_config.c  fastauthd_dbus_service.c  fastauthd_introspection.xml  fastauthd_nssdb_manager.c
fastauthd/autogen/: fastauthd_gdbus_autogen.c  fastauthd_gdbus_autogen.h
fastauthd/include/: fastauthd_config.h  fastauthd_dbus_service.h  fastauthd_nssdb_manager.h
fastauthd_oidc/: fastauthd_oidc.c  fastauthd_oidc_dbus_service.c  fastauthd_oidc_introspection.xml  fastauthd_oidc_msa.c  fastauthd_qrcode_gen.c
fastauthd_oidc/autogen/: fastauthd_oidc_gdbus_autogen.c  fastauthd_oidc_gdbus_autogen.h
fastauthd_oidc/include/: fastauthd_debug.h  fastauthd_oidc_dbus_service.h  fastauthd_oidc_msa.h
fastauthd_pam/: fastauthd_test.c  libpam_fastauthd.c
systemd_services/: fastauthd.service  fastauthd_oidc.service
